resources/policy/bundles/policy-essentials-v2022/psp-capabilities.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: policy-essentials-v2022-psp-capabilities
  labels:
    policy.plural.sh/bundleName: policy-essentials-v2022
  annotations:
    policycontroller.gke.io/bundleVersion: "202403.0"
    policy.plural.sh/constraintData: |-
      "{
        bundleName: 'policy-essentials-v2022',
        bundleDisplayName: 'Policy Essentials v2022',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-policy-essentials-v2022',
        bundleVersion: '202403.0',
        bundleDescription: 'Use the Policy Essentials v2022 policy bundle with Policy Controller to apply Google recommended best practices to your cluster resources.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Containers must drop the `NET_RAW` capability and are not permitted to add back any capabilities.',
        remediation: 'Set your containers with `securityContext.capabilities.add: []` and `securityContext.capabilities.drop: ["NET_RAW"]`. See "Set capabilities for a Container" for more information: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-capabilities-for-a-container',
        minimumTemplateLibraryVersion: '1.10.2',
        constraintHash: '1cbd5a3a7d5299f5df17319f38da6e01fa1d3a096dbd871abe731bcdad2b2826'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    excludedNamespaces:
    - kube-system
    - config-management-system
    - config-management-monitoring
    - resource-group-system
    - asm-system
    - gke-connect
    - cert-manager
    - anthos-identity-service
    - apigee
  parameters:
    allowedCapabilities: []
    requiredDropCapabilities:
    - NET_RAW
    exemptImages:
    - gcr.io/gke-release/*
    - gcr.io/config-management-release/*
    - gcr.io/kubebuilder/*
    - gcr.io/anthos-baremetal-release/*
    - gcr.io/gke-on-prem-release/*
    - gcr.io/gke-multi-cloud-release/*
    - gke.gcr.io/*
