resources/policy/bundles/policy-essentials-v2022/psp-host-namespace.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNamespace
metadata:
  name: policy-essentials-v2022-psp-host-namespace
  labels:
    policy.plural.sh/bundleName: policy-essentials-v2022
  annotations:
    policycontroller.gke.io/bundleVersion: "202403.0"
    policy.plural.sh/constraintData: |-
      "{
        bundleName: 'policy-essentials-v2022',
        bundleDisplayName: 'Policy Essentials v2022',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-policy-essentials-v2022',
        bundleVersion: '202403.0',
        bundleDescription: 'Use the Policy Essentials v2022 policy bundle with Policy Controller to apply Google recommended best practices to your cluster resources.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Restricts containers with `hostPID` or `hostIPC` set to `true`.',
        remediation: 'Containers cannot run with `hostPID` or `hostIPC` set to `true`. Set your containers with both `hostPID: false` and `hostIPC: false`.',
        minimumTemplateLibraryVersion: '1.11.1',
        constraintHash: '7cd7a7cd30116b463e3e0405e6b0df0a1f2c0e2b61291425fc3becf841c12c3e'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    excludedNamespaces:
    - kube-system
