resources/policy/bundles/policy-essentials-v2022/psp-host-network-ports.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: policy-essentials-v2022-psp-host-network-ports
  labels:
    policy.plural.sh/bundleName: policy-essentials-v2022
  annotations:
    policycontroller.gke.io/bundleVersion: "202403.0"
    policy.plural.sh/constraintData: |-
      "{
        bundleName: 'policy-essentials-v2022',
        bundleDisplayName: 'Policy Essentials v2022',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-policy-essentials-v2022',
        bundleVersion: '202403.0',
        bundleDescription: 'Use the Policy Essentials v2022 policy bundle with Policy Controller to apply Google recommended best practices to your cluster resources.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Restricts containers from running with the `hostNetwork` flag set to `true`.',
        remediation: 'Containers cannot run with `hostNetwork` set to `true`. Remove `hostNetwork: true` from your containers.',
        minimumTemplateLibraryVersion: '1.11.1',
        constraintHash: '0a5a8fab505744697e9c36858e534c6204888d96e7c81e8d04279f4e0f7287d7'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    excludedNamespaces:
    - kube-system
  parameters:
    hostNetwork: false
    min: 1
    max: 65535
