resources/policy/bundles/policy-essentials-v2022/psp-restrict_root_containers.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: policy-essentials-v2022-psp-pods-must-run-as-nonroot
  labels:
    policy.plural.sh/bundleName: policy-essentials-v2022
  annotations:
    policycontroller.gke.io/bundleVersion: "202403.0"
    policy.plural.sh/constraintData: |-
      "{
        bundleName: 'policy-essentials-v2022',
        bundleDisplayName: 'Policy Essentials v2022',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-policy-essentials-v2022',
        bundleVersion: '202403.0',
        bundleDescription: 'Use the Policy Essentials v2022 policy bundle with Policy Controller to apply Google recommended best practices to your cluster resources.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Restricts containers from running as the root user.',
        remediation: 'Containers cannot run with `runAsUser` set to `root`. Set your containers with `runAsUser: ` to a non-root user ID. See "Set the security context for a Pod" for more information: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod',
        minimumTemplateLibraryVersion: '1.11.1',
        constraintHash: '2d9d3335370e2d3b867bc40cd1fd474cce3d5498b17be5ddeee1a56b27afdcd2'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    excludedNamespaces:
    - kube-system
    - asm-system
    - config-management-system
    - cert-manager
    - anthos-identity-service
    - apigee
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot
    exemptImages:
    - gcr.io/gke-release/asm/proxyv2:*
    - gcr.io/anthos-baremetal-release/*
    - gke.gcr.io/*
