resources/policy/bundles/policy-essentials-v2022/restrict-clusteradmin-rolebindings.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictRoleBindings
metadata:
  name: policy-essentials-v2022-restrict-clusteradmin-rolebindings
  labels:
    policy.plural.sh/bundleName: policy-essentials-v2022
  annotations:
    policycontroller.gke.io/bundleVersion: "202403.0"
    policy.plural.sh/constraintData: |-
      "{
        bundleName: 'policy-essentials-v2022',
        bundleDisplayName: 'Policy Essentials v2022',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-policy-essentials-v2022',
        bundleVersion: '202403.0',
        bundleDescription: 'Use the Policy Essentials v2022 policy bundle with Policy Controller to apply Google recommended best practices to your cluster resources.',
        controlNumbers: '[]',
        severity: 'UNSPECIFIED',
        description: 'Restricts the use of the `cluster-admin` role.',
        remediation: 'Cannot use the cluster-admin `ClusterRole` for Role-based access control (RBAC). Use a different role. See "Using RBAC Authorization" for more information: https://kubernetes.io/docs/reference/access-authn-authz/rbac/#user-facing-roles',
        minimumTemplateLibraryVersion: '1.10.1',
        constraintHash: 'ac5260c6134d9b1be59afb4da0b5576ae2fda24fb4178a60f295660b5f702f26'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - rbac.authorization.k8s.io
        kinds:
          - ClusterRoleBinding
          - RoleBinding
  parameters:
    restrictedRole:
      apiGroup: rbac.authorization.k8s.io
      kind: ClusterRole
      name: cluster-admin
    allowedSubjects:
      - apiGroup: rbac.authorization.k8s.io
        kind: Group
        name: system:masters
      # for GKE Hub feature authorizer
      - apiGroup: rbac.authorization.k8s.io
        kind: User
        name: ^service-[0-9]+@gcp-sa-gkehub.iam.gserviceaccount.com$
        regexMatch: true
      # for ACM to install in-cluster resources
      - apiGroup: rbac.authorization.k8s.io
        kind: User
        name: ^service-[0-9]+@gcp-sa-anthosconfigmanagement.iam.gserviceaccount.com$
        regexMatch: true
      # for Config Sync reconciler service account
      - kind: ServiceAccount
        name: reconciler-manager
      # for Config Sync admission webhook
      - kind: ServiceAccount
        name: admission-webhook
      # For kube-storage-version-migrator, part of the GKE control plane
      - apiGroup: rbac.authorization.k8s.io
        kind: User
        name: system:storageversionmigrator
      # Kubernetes service account for Config Sync reconciler
      # https://cloud.google.com/anthos-config-management/docs/how-to/installing-config-sync#git-creds-secret
      - kind: ServiceAccount
        name: ^root-reconciler[a-z0-9-]*$
        regexMatch: true
      # for GKE Autopilot
      - kind: ServiceAccount
        name: system:gke-vpa-target-reader
      - kind: ServiceAccount
        name: serviceaccount-cluster-admin
